Added: new from() method.